--- a/home/index - 複製.html
+++ b/home/index - 複製.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="multiple-scene view-control-buttons">
+<body class="single-scene view-control-buttons">
 
 <div id="pano"></div>
 
@@ -17,13 +17,6 @@
     
       <a href="javascript:void(0)" class="scene" data-id="0-">
         <li class="text">樂華夜市</li>
-      </a>
-	 
-    <a href="../street" class="scene" >
-        <li class="text">永平路</li>
-      </a>
-    <a href="../81 street" class="scene" >
-        <li class="text">永平路81巷</li>
       </a>
     
   </ul>
